--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -125,6 +125,13 @@
       | :--- | :--- | :--- | :--- |
       | messageId | 消息ID | string\(32\) | messageId |
       | msgSendSysId | 消息发送方系统ID | string\(30\) | msgSendSysId |
+      | **输出** |  |  |  |
+      | success | 发送是否成功 | boolean | success |
+
+   2. | **输入** |  |  |  |
+      | :--- | :--- | :--- | :--- |
+      | messageId | 消息ID | string\(32\) | messageId |
+      | msgSendSysId | 消息发送方系统ID | string\(30\) | msgSendSysId |
       | msgSender | 消息发件人 | string\(50\) | msgSender |
       | msgReceiver | 消息收件人 | string\(50\) | msgReceiver |
       | title | 标题 | string\(100\) | title |
@@ -137,8 +144,7 @@
       | **输出** |  |  |  |
       | success | 发送是否成功 | boolean | success |
       | message | 失败原因 | string\(128\) | message |
-
-   2. 发送广播消息  
+   3. 发送广播消息  
       url:/xxx/message/broadcast  
       对应字段为
 
