--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -167,9 +167,9 @@
 
 | **输入** |  |  |  |
 | :--- | :--- | :--- | :--- |
-|  |  |  |  |
+| asdfafas | asdfafa | asdff | asdfasfd |
 | **输出** |  |  |  |
-|  |  |  |  |
+| asdfasd | fasdfa | afdddddad | asdfads |
 
 ### 使用方法
 
