--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -28,49 +28,138 @@
 
 服务器端：
 
-| sadff | adfadf |
-| :--- | :--- |
-| asdfadf | asdffffffffff |
-
 1. 消息类型汇总计数  
-   url:xxx/message/total
+   url:xxx/message/total  
+   对应字段为
 
-对应字段为
+   | **输入** |  |  |  |
+   | :--- | :--- | :--- | :--- |
+   | userId | 用户ID | string\(20\) | userId |
+   | **输出** |  |  |  |
+   | jsonArray |  | array | jsonArray |
+   | jsonArray.messageType | 消息类型 | string\(2\) | messageType |
+   | jsonArray.messageCount | 消息数量 | int\(4\) | messageCount |
+   | jsonArray.typeName | 消息类型名称 | string\(20\) | typeName |
 
-| asfdasdfadsf | adsfadf |
-| :--- | :--- |
-| adsfadf | asdffffffa |
-
-1. 消息列表  
+2. 消息列表  
    url:xxx/message/list  
    对应字段为
 
-   | sdfafa | adsffff |
-   | :--- | :--- |
-   | sadf | adfaf |
+   | **输入** |  |  |  |
+   | :--- | :--- | :--- | :--- |
+   | userId | 用户ID | string\(20\) | userId |
+   | pageStartNo | 当前页首行记录编号（从0开始） | long | pageStartNo |
+   | pageSize | 每页显示记录数 | int\(4\) | pageSize |
+   | jsonArray |  | array | jsonArray |
+   | jsonArray.columnName | 要排序的列名 | string\(20\) | columnName |
+   | jsonArray.orderType | 升序&降序 | string\(20\) | orderType |
+   | condition |  |  | condition |
+   | condition.start | 开始发信时间 | string\(30\) | start |
+   | condition.end | 发信截止时间 | string\(30\) | end |
+   | condition.messageType | 消息类型 | string\(2\) | messageType |
+   | condition.msgReadedStatus | 消息已读标识 | string\(2\) | msgReadedStatus |
+   | condition.searchKey | 查询关键字 | string\(30\) | searchKey |
+   | condition.msgReceiver | 消息收件人 | string\(50\) | msgReceiver |
+   | **输出** |  |  |  |
+   | totalCount | 总记录数 | long | totalCount |
+   | jsonArray |  | array | jsonArray |
+   | jsonArray.messageId | 消息ID | string\(32\) | messageId |
+   | jsonArray.msgSendSysId | 消息发送方系统ID | string\(30\) | msgSendSysId |
+   | jsonArray.msgSender | 消息发件人 | string\(50\) | msgSender |
+   | jsonArray.msgReceiver | 消息收件人 | string\(50\) | msgReceiver |
+   | jsonArray.title | 标题 | string\(100\) | title |
+   | jsonArray.msgCont | 消息正文 | string\(800\) | msgCont |
+   | jsonArray.messageType | 消息类型 | string\(2\) | messageType |
+   | jsonArray.messageType.key | 代码KEY | string\(8\) | key |
+   | jsonArray.messageType.description | 描述 | string\(80\) | description |
+   | jsonArray.msgSendTime | 消息发件时间 | date\(12\) | msgSendTime |
+   | jsonArray.msgPriority | 消息优先级 | int\(2\) | msgPriority |
+   | jsonArray.msgDisplayType | 消息展示方式 | string\(2\) | msgDisplayType |
+   | jsonArray.msgReadedStatus | 消息已读标识 | string\(2\) | msgReadedStatus |
+   | jsonArray.msgReadedStatus.key | 代码KEY | string\(8\) | key |
+   | jsonArray.msgReadedStatus.description | 描述 | string\(80\) | description |
 
-2. 消息设置已读  
+3. 消息设置已读  
    url:xxx/message/read  
    对应字段为
 
-3. 消息设置未读  
+   | **输入** |  |  |  |
+   | :--- | :--- | :--- | :--- |
+   | userId | 用户ID | string\(20\) | userId |
+   | jsonArray |  | array | jsonArray |
+   | jsonArray.messages | 消息 | string\(128\) | messages |
+   | **输出** |  |  |  |
+   | readed | 修改是否成功 | int\(4\) | readed |
+
+4. 消息设置未读  
    url:xxx/message/unread  
    对应字段为
 
-4. 消息删除  
+   | **输入** |  |  |  |
+   | :--- | :--- | :--- | :--- |
+   | userId | 用户ID | string\(20\) | userId |
+   | jsonArray |  | array | jsonArray |
+   | jsonArray.messages | 消息 | string\(128\) | messages |
+   | **输出** |  |  |  |
+   | unreaded | 修改是否成功 | int\(4\) | unreaded |
+
+5. 消息删除  
    url:xxx/message/delete  
    对应字段为
 
-5. 获取stomp连接信息。 客户端：
+   | **输入** |  |  |  |
+   | :--- | :--- | :--- | :--- |
+   | userId | 用户ID | string\(20\) | userId |
+   | jsonArray |  | array | jsonArray |
+   | jsonArray.messages | 消息 | string\(128\) | messages |
+   | **输出** |  |  |  |
+   | delete | 删除是否成功 | int\(4\) | delete |
+
+6. 获取stomp连接信息。 客户端：
 
    1. 发送单条消息  
       url:/xxx/message/sendto/{userId}  
       对应字段为
 
-   2. 
-   3. 发送广播消息  
+      | **输入** |  |  |  |
+      | :--- | :--- | :--- | :--- |
+      | messageId | 消息ID | string\(32\) | messageId |
+      | msgSendSysId | 消息发送方系统ID | string\(30\) | msgSendSysId |
+      | msgSender | 消息发件人 | string\(50\) | msgSender |
+      | msgReceiver | 消息收件人 | string\(50\) | msgReceiver |
+      | title | 标题 | string\(100\) | title |
+      | msgCont | 消息正文 | string\(800\) | msgCont |
+      | messageType | 消息类型 | string\(2\) | messageType |
+      | msgSendTime | 消息发件时间 | date\(12\) | msgSendTime |
+      | msgPriority | 消息优先级 | int\(2\) | msgPriority |
+      | msgDisplayType | 消息展示方式 | string\(2\) | msgDisplayType |
+      | saveLocal | 本地保存 | boolean | saveLocal |
+      | **输出** |  |  |  |
+      | success | 发送是否成功 | boolean | success |
+      | message | 失败原因 | string\(128\) | message |
+
+   2. 发送广播消息  
       url:/xxx/message/broadcast  
       对应字段为
+
+      | **输入** |  |  |  |
+      | :--- | :--- | :--- | :--- |
+      | messageId | 消息ID | string\(32\) | messageId |
+      | msgSendSysId | 消息发送方系统ID | string\(30\) | msgSendSysId |
+      | msgSender | 消息发件人 | string\(50\) | msgSender |
+      | msgReceiver | 消息收件人 | string\(50\) | msgReceiver |
+      | title | 标题 | string\(100\) | title |
+      | msgCont | 消息正文 | string\(800\) | msgCont |
+      | messageType | 消息类型 | string\(2\) | messageType |
+      | msgSendTime | 消息发件时间 | date\(12\) | msgSendTime |
+      | msgPriority | 消息优先级 | int\(2\) | msgPriority |
+      | msgDisplayType | 消息展示方式 | string\(2\) | msgDisplayType |
+      | saveLocal | 本地保存 | boolean | saveLocal |
+      | **输出** |  |  |  |
+      | success | 发送是否成功 | boolean | success |
+      | message | 失败原因 | string\(128\) | message |
+
+
 
 ### 使用方法
 
