--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -117,7 +117,7 @@
 
 6. 获取stomp连接信息。 客户端：
 
-   1. 发送单条消息  
+    ① 发送单条消息  
       url:/xxx/message/sendto/{userId}  
       对应字段为
 
@@ -138,7 +138,7 @@
 | success | 发送是否成功 | boolean | success |
 | message | 失败原因 | string\(128\) | message |
 
-   2. 发送广播消息  
+    ② 发送广播消息  
       url:/xxx/message/broadcast  
       对应字段为
 
