--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -137,9 +137,9 @@
 | **输出** |  |  |  |
 | success | 发送是否成功 | boolean | success |
 | message | 失败原因 | string\(128\) | message |
-    
-    ② 发送广播消息  
-      url:/xxx/message/broadcast  
+
+    ① 发送广播消息
+      url:/xxx/message/broadcast
       对应字段为
 
 | **输入** |  |  |  |
