--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -138,10 +138,8 @@
 | success | 发送是否成功 | boolean | success |
 | message | 失败原因 | string\(128\) | message |
 
- ① 发送广播消息
-   url:/xxx/message/broadcast
-   对应字段为
-   
+速度发货啦水电费
+
 | **输入** |  |  |  |
 | :--- | :--- | :--- | :--- |
 | messageId | 消息ID | string\(32\) | messageId |
