--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -138,7 +138,9 @@
 | success | 发送是否成功 | boolean | success |
 | message | 失败原因 | string\(128\) | message |
 
-速度发货啦水电费
+ ① 发送广播消息  
+   url:/xxx/message/broadcast
+   对应字段为
 
 | **输入** |  |  |  |
 | :--- | :--- | :--- | :--- |
