--- a/15.消息通知与推送.md
+++ b/15.消息通知与推送.md
@@ -138,8 +138,8 @@
 | success | 发送是否成功 | boolean | success |
 | message | 失败原因 | string\(128\) | message |
 
- ② 发送广播消息
-   url:/xxx/message/broadcast
+ ② 发送广播消息</br>
+   url:/xxx/message/broadcast</br>
    对应字段为
 
 | **输入** |  |  |  |
