--- a/16.异常处理.md
+++ b/16.异常处理.md
@@ -48,7 +48,7 @@
 | 1004 | NumberFormatException |  |
 | 1005 | IndexOutOfBoundsException |  |
 | 1006 | UnsupportedClassVersionError |  |
-| 1007 | JspException |  |
+| 1007 | JspException | sdf |
 
 除了默认的异常类型与消息编号外，框架为开发者一种能够定制消息代码的方式。所有开发者抛出的业务异常类型为com.halo.core.exception.BusinessException，开发者可以通过向webconfig.properties文件中添加web.message.business.XXXX属性来定义新的消息编号与消息文本。例如：
 
