--- a/07.服务幂等性支持.md
+++ b/07.服务幂等性支持.md
@@ -1,7 +1,11 @@
 ## 服务幂等性支持
 
 Halo框架为所有在Spring容器中托管声明周期的Bean实例提供了幂等性支持。幂等性是基于消息和事件驱动的流程串联的基础。也是在分布式系统下，基于CAP理论保证原子交易数据一致性的必要条件。  
-有关服务幂等性概念，可参考如下资料：[http://blog.csdn.net/fbysss/article/details/8024748](http://blog.csdn.net/fbysss/article/details/8024748)[http://coolshell.cn/articles/4787.html](http://coolshell.cn/articles/4787.html)
+有关服务幂等性概念，可参考如下资料：
+
+[http://blog.csdn.net/fbysss/article/details/8024748](http://blog.csdn.net/fbysss/article/details/8024748)
+
+[http://coolshell.cn/articles/4787.html](http://coolshell.cn/articles/4787.html)
 
 ### 幂等方法的声明
 
