--- a/01.版本记录.md
+++ b/01.版本记录.md
@@ -2,30 +2,33 @@
 
 ### coldnoodle.2.2.0-RELEASE
 
-* 问题修复
+- 变更内容
 
-  1. 重新规划批作业监控组件，原有batch-support改为batch-trigger。
-  2. 将supports组件分类，分为：core-supports，business-supports，develop-supports。
-  3. 在message-support组件中，添加对消息队列的容错机制。
-  4. 在header-support组件中，为每个REST/SOAP请求添加默认的报文头信息。
-  5. 在halo-dao中，添加了初始化连接数和最小连接数的配置。
+  1. 重新规划批作业监控组件，原有```batch-support```改为```batch-trigger```。
+  
+  2. 将```supports```组件集合分类，分为：```core-supports```，```business-supports```，```develop-supports```。
+  
+  3. 在```message-support```中，添加对消息队列的容错机制。
+  
+  4. 在```header-support```中，为每个REST/SOAP请求添加默认的报文头信息。
+  
+  5. 在```halo-dao```中，添加了初始化连接数和最小连接数的配置。
 
-* 新功能
+  6. 改造核心组件```clic-auth```
 
-  **1. 改造核心组件：clic-auth**
+  > * 重新规划整个应用认证与授权体系流程。支持认证协议的可插拔式。面向supports提供一套对接接口。并提供标准登陆实现，oauth2服务端实现。
+  
+  > * 支持会话缓存与业务缓存分离。
 
-  * 重新规划整个应用认证与授权体系流程。支持认证协议的可插拔式。面向supports提供一套对接接口。并提供标准登陆实现，oauth2服务端实现。
-  * 支持会话缓存与业务缓存分离。
+  7. 改造核心组件```clic-dasc```
 
-  **2. 改造核心组件：clic-dasc**
+  > 对存在的providerId的场景下，判断providerId是否与当前方法签名相同，进而决定是否发送消息。
 
-  * 对存在的providerId的场景下，判断providerId是否与当前方法签名相同，进而决定是否发送消息。
+  8. 新增核心组件```clic-tune```
 
-  **3. 新增核心组件：clic-tune**
-
-  * 配置项集中管理。
-  * 基于zookeeper的心跳服务。
-  * 基于flyway，maven，zookeeper，检查数据库与应用节点的程序版本一致性。
+  > * 配置项集中管理。
+  > * 基于zookeeper的心跳服务。
+  > * 基于flyway，maven，zookeeper，检查数据库与应用节点的程序版本一致性。
 
   **4. 新增应用代码工程：xxx-db**
 
