--- a/01.版本记录.md
+++ b/01.版本记录.md
@@ -15,58 +15,42 @@
   5. 在```halo-dao```中，添加了初始化连接数和最小连接数的配置。
 
   6. 改造核心组件```clic-auth```
-
-  > * 重新规划整个应用认证与授权体系流程。支持认证协议的可插拔式。面向supports提供一套对接接口。并提供标准登陆实现，oauth2服务端实现。
+  > - 重新规划整个应用认证与授权体系流程。支持认证协议的可插拔式。
+  > - 面向supports提供一套对接接口。并提供标准登陆实现，oauth2服务端实现。
+  > - 支持会话缓存与业务缓存分离。
   
-  > * 支持会话缓存与业务缓存分离。
-
   7. 改造核心组件```clic-dasc```
-
   > 对存在的providerId的场景下，判断providerId是否与当前方法签名相同，进而决定是否发送消息。
 
   8. 新增核心组件```clic-tune```
+  > - 配置项集中管理。
+  > - 基于zookeeper的心跳服务。
+  > - 基于flyway，maven，zookeeper，检查数据库与应用节点的程序版本一致性。
 
-  > * 配置项集中管理。
-  > * 基于zookeeper的心跳服务。
-  > * 基于flyway，maven，zookeeper，检查数据库与应用节点的程序版本一致性。
+  9. 新增应用代码模版工程：```xxx-db```
+  > 使用flyway管理数据库脚本版本基线。
 
-  **4. 新增应用代码工程：xxx-db**
+  10. 新增扩展组件```batch-trigger```
+  > 基于http，MQ的批作业触发器组件封装。
 
-  * 使用flyway管理数据库脚本版本基线。
+  11. 新增扩展组件```batch-admin```
+  > 围绕spring-batch做的批作业监控与管理组件。
 
-  **5. 新增扩展组件：batch-trigger**
+  12. 新增扩展组件```dbversion-checker```
+  > 读取数据库基线的版本号
 
-  * 基于http，MQ的批作业触发器组件封装。
+  13. 新增扩展组件```session-router```
+  > 用于对会话缓存的路由分离。
 
-  **6. 新增扩展组件：batch-admin**
+  14. 新增扩展组件```auth-classic```
+  > ```halo-auth```的扩展，基于页面登录的授权认证组件。
 
-  * 围绕spring-batch做的批作业监控与管理组件。
+  15. 新增扩展组件```auth-oauth2-authorizeserver```
+  > ```halo-auth```扩展，基于oauth2的授权认证组件。
 
-  **7. 新增扩展组件：batch-admin**
+  16. 新增扩展组件```auth-oauth2-resourceserver```
+  > ```halo-auth```扩展，基于oauth2的资源访问组件。
 
-  * 围绕spring-batch做的批作业监控与管理组件。
-
-  **8. 新增扩展组件：dbversion-checker**
-
-  * 读取数据库基线的版本号
-
-  **9. 新增扩展组件：session-router**
-
-  * 用于对会话缓存的路由分离。
-
-  **10. 新增扩展组件：auth-classic**
-
-  * halo-auth扩展，基于oauth2的授权认证组件。
-
-  **11. 新增扩展组件：auth-oauth2-authorizeserver**
-
-  * halo-auth扩展，基于oauth2的授权认证组件。
-
-  **12. 新增扩展组件：auth-oauth2-resourceserver**
-
-  * halo-auth扩展，基于oauth2的资源访问组件。
-
-  **13. 新增扩展组件：health-checker**
-
-  * 用于外部代理服务器或负载均衡服务的健康检查服务。
+  17. 新增扩展组件```health-checker```
+  > 用于外部代理服务器或负载均衡服务的健康检查服务。
 
