--- a/01.版本记录.md
+++ b/01.版本记录.md
@@ -1,6 +1,44 @@
 ## 版本记录
 
-### coldnoodle.2.2.0-RELEASE
+### coldnoodle.2.2.4
+
+- 变更内容
+
+  1. 修复批作业组件在使用```<schedule/>```标签时，由于忽视了Incrementer的步进造成无法持续执行的问题。
+  
+  2. 修复批作业组件在使用默认的```JobParametersIncrementer`实现时，可能产生run.id找不到导致步进异常的问题。
+
+### coldnoodle.2.2.3
+
+- 变更内容
+
+  1. 配合CSRF攻击防御，在认证组件上添加对sessionid的访问。
+  
+  2. 新增扩展组件```csrf-firewall```。CSRF攻击防御包。
+  
+  3. 新增扩展组件```auth-uaa```。添加对UAA认证的对接支持。
+
+### coldnoodle.2.2.2
+
+- 变更内容
+
+  1. 修改kafka的jar包版本号：0.8.2.2->0.9.0.1
+  
+  2. 修复了由于使用本地缓存优化Session读取导致的数据一致性问题。关闭本地缓存。
+  
+  3. 修复启动/暂停Quartz所有Job时，出现重复操作打印出异常的问题。
+
+### coldnoodle.2.2.1
+
+- 变更内容
+
+  1. 修复批作业任务启动器工具类在处理job的restart和newInstance过程中，可能会丢失job参数列表的问题。
+  
+  2. 修改kafka的jar包版本号：0.8.2.2->0.9.0.1。
+  
+  3. 修复kafka日志输出时，logback未预判断kafka连通性，进而造成应用的性能问题。
+  
+### coldnoodle.2.2.0
 
 - 变更内容
 
