--- a/04.Spring集成.md
+++ b/04.Spring集成.md
@@ -39,11 +39,10 @@
 
 | 包路径 | 开放的注解 |
 | :---: | :---: |
-| com.\*.\*.web | 全部注解类型 |
-| com.\*.\*.service | @Autowired，@Resource，@Service |
-| com.\*.\*.service | @com.alibaba.dubbo.config.annotation.Service |
-| com.\*.\*.service | @com.alibaba.dubbo.config.annotation.Reference |
-| com.\*.\*.dao | @Autowired，@Resource，@Repository |
+| ````com.\*.\*.web```` | 全部注解类型 |
+| ````com.\*.\*.service```` | @Autowired,@Resource,@Service, halo框架功能注解支持 |
+| ````com.\*.\*.business```` | @Autowired，@Resource，@Service |
+| ````com.\*.\*.dao```` | @Autowired，@Resource，@Repository |
 
 
 2.XML配置
@@ -66,22 +65,26 @@
 
 借助SpringFramework的强大功能，框架几乎覆盖了所有第三方组件的Spring托管与封装。以下是框架通过Spring管理的第三方组件清单。
 
-| 组件名称 | 托管的服务类 |
+| 开源组件 | halo组件 |
 | :--- | :--- |
-| Jedis | com.halo.core.cache.api.CacheService\(cacheService\)，com.halo.core.cache.api.CacheMetaInfoFactory\(cacheMetaInfoFactory\) |
-| Shiro | com.halo.core.auth.provider.SessionDaoProvider\(sessionDao\)，com.halo.core.auth.token.support.CacheSessionDaoImpl\(cacheSessionDao\)，com.halo.core.auth.provider.RealmServiceProvider\(realmService\) |
-| cxf | org.apache.cxf.interceptor.LoggingInInterceptor\(cxfLogInbound\)，org.apache.cxf.interceptor.LoggingOutInterceptor\(cxfLogOutbound\)，com.halo.core.service.impl.ServiceHeaderInboundImpl\(serviceHeaderInbound\)，com.halo.core.service.impl.ServiceHeaderOutboundImpl\(serviceHeaderOutbound\)，com.halo.core.service.impl.ServiceExceptionOutboundImpl\(serviceExceptionOutbound\) |
-| jdbc | org.springframework.jdbc.core.JdbcTemplate，org.springframework.jdbc.datasource.DataSourceTransactionManager\(transactionManager\)，com.halo.core.dao.support.DynamicDataSourceAdvice\(dynDataSourceAdvice\) |
-| Druid |  |
-| proxools | org.logicalcobwebs.proxool.ProxoolDataSource |
-| slf4j | com.halo.core.log.LoggingAdvice |
-| resource | com.halo.core.resource.provider.ResourceServiceProvider\(resourceService\)，com.halo.core.resource.impl.FileResourceServiceImpl\(fileResourceService\)，com.halo.core.resource.impl.MongoResourceServiceImpl\(mongoResourceService\) |
-| Hibernate-validator | org.springframework.validation.beanvalidation.LocalValidatorFactoryBean\(validatorService\) |
-| webMessage | com.halo.core.message.impl.ResponseMesageFactoryImpl\(responseMesageFactory\) |
-| RabbitMQ | com.halo.core.queue.impl.QueueConnectionFactoryImpl\(QueueConnectionFactory\) |
-| Quartz | com.halo.core.batch. BatchSchedulerBean |
-| Spring-batch |  |
-| Oauth2 |  |
+| ```Jedis``` | ```halo-log``` |
+| ```Shiro``` | ```halo-auth``` |
+| ```CXF``` | ```halo-cxf``` |
+| ```spring-jdbc``` | ```halo-dao``` |
+| ```Druid``` | ```halo-dao``` |
+| ```slf4j``` | ```halo-log``` |
+| ```Hibernate-validator``` | ```halo-common``` |
+| ```FastJSON``` | ```halo-common``` |
+| ```RabbitMQ``` | ```halo-queue``` |
+| ```Quartz``` | ```halo-batch``` |
+| ```curator-framework``` | ```halo-tune``` |
+| ```spring-batch``` | ```halo-batch``` |
+| ```spring-mvc``` | ```halo-web``` |
+
+
+
+
+sdasdsdasda
 
 
 
