--- a/05.服务集成.md
+++ b/05.服务集成.md
@@ -1,4 +1,4 @@
-## 服务集成
+## 远程服务集成
 
 WebApp与ServiceApp之间的交互都是同服务调用完成的。（WebApp无法连接数据库，但是可以连接缓存和消息队列）。服务集成组件在框架中占据着重要的位置。其中不仅包括服务发布，服务调用。在交互过程中的数据监控，日志管理等也同样重要。  
 同样的，在跨系统的serviceapp间做服务调用时，不仅仅需要基于RPC的同步服务调用，实际业务中也对异步服务和数据一致性有诉求。  
