--- a/介绍/配置清单.md
+++ b/介绍/配置清单.md
@@ -57,7 +57,7 @@
 | maxQueueSize | 必填 | 512 | 当使用异步日志时，日志队列中存储的最大日志对象个数 |
 | discardingThreshold | 必填 | 0 | 当使用异步日志时，日志队列到达20%容量时，是否要丢弃TRACE、DEBUG和INFO级别的event。0为不丢弃 |
 | charset | 必填 | UTF-8 | 字符集 |
-| contentPattern | 必填 | \[\[\[%d{yyyy-MM-dd HH:mm:ss.SSS} \ %mdc{tcode} \ %level \ %mdc{path} \ %logger{100} \ %mdc{act} \ %msg\]\]\]%n | 日志的打印形式 |
+| contentPattern | 必填 | \[\[\[%d{yyyy-MM-dd HH:mm:ss.SSS}  %mdc{tcode}  %level  %mdc{path}  %logger{100}  %mdc{act}  %msg\]\]\]%n | 日志的打印形式 |
 | fullFileNamePattern | 选填 | full-%d{yyyy-MM-dd}.log | 全量日志文件的时间滚动生成策略 |
 | coreFileNamePattern | 选填 | core-%d{yyyy-MM-dd}.log | 核心组件core日志文件的时间滚动生成策略 |
 | daoFileNamePattern | 选填 | dao-%d{yyyy-MM-dd}.log | dao日志文件的时间滚动生成策略。XXX-service-app，XXX-batch-app工程必填 |
@@ -122,7 +122,8 @@
 | :--- | :--- | :--- | :--- |
 | web.message.business.\*\*\* | 选填 |  | 对功能代码中可能抛出的业务异常进行“错误码：错误描述”的映射 |
 | web.session.timeout | 必填 | 1200000 | session超时时间\[毫秒\] |
-| web.maxUploadSize | 必填 | 5 | Web文件上传的最大容量\(MB\) |
+| web.maxUploadSize | 必填 | 5 | Web文件上传的最大容量\(MB\)web.uploadFileExtensions |
+| web.uploadFileExtensions | 选填 |  | 允许上传的文件后缀\(, 分隔\) |
 | system.version | 必填 | ${project.version} | 当前工程系统版本号 |
 | batch.asynjob.threadLimit | 必填 | 1000 | 执行异步批作业Job的线程池大小 |
 
