--- a/介绍/配置清单.md
+++ b/介绍/配置清单.md
@@ -34,6 +34,7 @@
 | jdbc.dynamic.interceptor.call | 选填 |  | 对jdbctemplate中“call\*”的方法拦截。（每个配置项可以填写唯一个路由数据源.多填无效,不填默认走default数据源） |
 | jdbc.dynamic.interceptor.batch | 选填 |  | 对jdbctemplate中“batch\*”的方法拦截。（每个配置项可以填写唯一个路由数据源.多填无效,不填默认走default数据源） |
 | jdbc.debug.logging | 必填 | true | SQL操作日志开关，需要在logback.xml中打开DEBUG级别才能生效 |
+| jdbc.maxWait | 必填 | 60000 | 获取数据库连接的最大等待时间 |
 | jdbc.initConnectionCount | 必填 |  | 连接池初始化时的连接数 |
 | jdbc.minConnectionCount | 必填 |  | 连接池保持的最小连接数 |
 | jdbc.maxConnectionCount | 必填 |  | 最大连接数 |
@@ -41,6 +42,8 @@
 | jdbc.poolPreparedStatements | 必填 | true | 是否打开PSCache。分库分表较多的数据库，建议配置为false |
 | jdbc.maxPoolPreparedStatementPerConnectionSize | 必填 | 20 | 每个连接挂载的最大PS缓存数量 |
 | Jdbc.transaction.timeout | 必填 | 60 | 数据库事务超时时长（秒） |
+| jdbc.testOnBorrow | 必填 | false | 从连接池获取连接前，是否要做连通性检测 |
+| jdbc.validationQuery | 选填 |  | 连通性检测的sql语句 |
 | jdbc.ds.default.name | 必填 | defaultDataSource | 默认数据源的别名。当defaultDataSource的Bean实例为Provider时, 该值为指定真实数据源的Bean名称 |
 | jdbc.ds.default.url | 必填 |  | 数据库连接URL |
 | jdbc.ds.default.user | 必填 |  | 用户名 |
