--- a/介绍/组件清单.md
+++ b/介绍/组件清单.md
@@ -1,22 +1,31 @@
 ## 组件清单
+
 halo框架使用了很多主流的开源组件和工具。所使用的开源组件也会随着升级不断的变化。目前的开源组件清单如下：
 
 | 开源组件名称 | halo组件名称 |
 | :--- | :--- |
-| ```spring-framework``` | ```halo-common``` |
-| ```Hibernate-validator``` | ```halo-common``` |
-| ```FastJSON``` | ```halo-common``` |
-| ```apache-commons``` | ```halo-common``` |
-| ```slf4j``` | ```halo-log``` |
-| ```logback``` | ```halo-log``` |
-| ```kafka-clients``` | ```halo-log``` |
-| ```Jedis``` | ```halo-cahce``` |
-| ```Shiro``` | ```halo-auth``` |
-| ```CXF``` | ```halo-cxf``` |
-| ```spring-jdbc``` | ```halo-dao``` |
-| ```Druid``` | ```halo-dao``` |
-| ```RabbitMQ``` | ```halo-queue``` |
-| ```Quartz``` | ```halo-batch``` |
-| ```spring-batch``` | ```halo-batch``` |
-| ```curator-framework``` | ```halo-tune``` |
-| ```spring-mvc``` | ```halo-web``` |
+| `spring-framework` | `halo-common` |
+| `Hibernate-validator` | `halo-common` |
+| `FastJSON` | `halo-common` |
+| `apache-commons` | `halo-common` |
+| `slf4j` | `halo-log` |
+| `logback` | `halo-log` |
+| `kafka-clients` | `halo-log` |
+| `Jedis` | `halo-cahce` |
+| `Shiro` | `halo-auth` |
+| `CXF` | `halo-cxf` |
+| `spring-jdbc` | `halo-dao` |
+| `Druid` | `halo-dao` |
+| `RabbitMQ` | `halo-queue` |
+| `Quartz` | `halo-batch` |
+| `spring-batch` | `halo-batch` |
+| `curator-framework` | `halo-tune` |
+| `spring-mvc` | `halo-web` |
+| `akka` | `halo-chopper` |
+
+
+
+
+
+
+
