--- a/版本记录.md
+++ b/版本记录.md
@@ -1,5 +1,11 @@
 ## 版本记录
 
+### coldnoodle.2.2.5
+
+- 变更内容
+
+  1. 添加```testOnBorrow```和```validateQuery```配置项，避免从连接池中获取数据库连接时产生```RecoverableDataAccessException```异常，新增配置项允许每次取连接时做连通性测试。
+
 ### coldnoodle.2.2.4
 
 - 变更内容
