--- a/版本记录.md
+++ b/版本记录.md
@@ -2,99 +2,113 @@
 
 ### coldnoodle.2.2.5
 
-- 变更内容
+* 变更内容
 
-  1. 添加```testOnBorrow```和```validateQuery```配置项，避免从连接池中获取数据库连接时产生```RecoverableDataAccessException```异常，新增配置项允许每次取连接时做连通性测试。
+  1. 添加`testOnBorrow`和`validateQuery`配置项，避免从连接池中获取数据库连接时产生`RecoverableDataAccessException`异常，新增配置项允许每次取连接时做连通性测试。
 
 ### coldnoodle.2.2.4
 
-- 变更内容
+* 变更内容
 
-  1. 修复批作业组件在使用```<schedule/>```标签时，由于忽视了Incrementer的步进造成无法持续执行的问题。
-  
-  2. 修复批作业组件在使用默认的```JobParametersIncrementer`实现时，可能产生run.id找不到导致步进异常的问题。
+  1. 修复批作业组件在使用`<schedule/>`标签时，由于忽视了Incrementer的步进造成无法持续执行的问题。
+
+  2. 修复批作业组件在使用默认的```JobParametersIncrementer```实现时，可能产生run.id找不到导致步进异常的问题。
 
 ### coldnoodle.2.2.3
 
-- 变更内容
+* 变更内容
 
   1. 配合CSRF攻击防御，在认证组件上添加对sessionid的访问。
-  
-  2. 新增扩展组件```csrf-firewall```。CSRF攻击防御包。
-  
-  3. 新增扩展组件```auth-uaa```。添加对UAA认证的对接支持。
+
+  2. 新增扩展组件`csrf-firewall`。CSRF攻击防御包。
+
+  3. 新增扩展组件`auth-uaa`。添加对UAA认证的对接支持。
 
 ### coldnoodle.2.2.2
 
-- 变更内容
+* 变更内容
 
-  1. 修改kafka的jar包版本号：0.8.2.2->0.9.0.1
-  
+  1. 修改kafka的jar包版本号：0.8.2.2-&gt;0.9.0.1
+
   2. 修复了由于使用本地缓存优化Session读取导致的数据一致性问题。关闭本地缓存。
-  
+
   3. 修复启动/暂停Quartz所有Job时，出现重复操作打印出异常的问题。
 
 ### coldnoodle.2.2.1
 
-- 变更内容
+* 变更内容
 
   1. 修复批作业任务启动器工具类在处理job的restart和newInstance过程中，可能会丢失job参数列表的问题。
-  
-  2. 修改kafka的jar包版本号：0.8.2.2->0.9.0.1。
-  
+
+  2. 修改kafka的jar包版本号：0.8.2.2-&gt;0.9.0.1。
+
   3. 修复kafka日志输出时，logback未预判断kafka连通性，进而造成应用的性能问题。
-  
+
 ### coldnoodle.2.2.0
 
-- 变更内容
+* 变更内容
 
-  1. 重新规划批作业监控组件，原有```batch-support```改为```batch-trigger```。
-  
-  2. 将```supports```组件集合分类，分为：```core-supports```，```business-supports```，```develop-supports```。
-  
-  3. 在```message-support```中，添加对消息队列的容错机制。
-  
-  4. 在```header-support```中，为每个REST/SOAP请求添加默认的报文头信息。
-  
-  5. 在```halo-dao```中，添加了初始化连接数和最小连接数的配置。
+  1. 重新规划批作业监控组件，原有`batch-support`改为`batch-trigger`。
 
-  6. 改造核心组件```clic-auth```
-  > - 重新规划整个应用认证与授权体系流程。支持认证协议的可插拔式。
-  > - 面向supports提供一套对接接口。并提供标准登陆实现，oauth2服务端实现。
-  > - 支持会话缓存与业务缓存分离。
-  
-  7. 改造核心组件```clic-dasc```
-  > 对存在的providerId的场景下，判断providerId是否与当前方法签名相同，进而决定是否发送消息。
+  2. 将`supports`组件集合分类，分为：`core-supports`，`business-supports`，`develop-supports`。
 
-  8. 新增核心组件```clic-tune```
-  > - 配置项集中管理。
-  > - 基于zookeeper的心跳服务。
-  > - 基于flyway，maven，zookeeper，检查数据库与应用节点的程序版本一致性。
+  3. 在`message-support`中，添加对消息队列的容错机制。
 
-  9. 新增应用代码模版工程：```xxx-db```
-  > 使用flyway管理数据库脚本版本基线。
+  4. 在`header-support`中，为每个REST/SOAP请求添加默认的报文头信息。
 
-  10. 新增扩展组件```batch-trigger```
-  > 基于http，MQ的批作业触发器组件封装。
+  5. 在`halo-dao`中，添加了初始化连接数和最小连接数的配置。
 
-  11. 新增扩展组件```batch-admin```
-  > 围绕spring-batch做的批作业监控与管理组件。
+  6. 改造核心组件`clic-auth`
 
-  12. 新增扩展组件```dbversion-checker```
-  > 读取数据库基线的版本号
+     > * 重新规划整个应用认证与授权体系流程。支持认证协议的可插拔式。
+     > * 面向supports提供一套对接接口。并提供标准登陆实现，oauth2服务端实现。
+     > * 支持会话缓存与业务缓存分离。
 
-  13. 新增扩展组件```session-router```
-  > 用于对会话缓存的路由分离。
+  7. 改造核心组件`clic-dasc`
 
-  14. 新增扩展组件```auth-classic```
-  > ```halo-auth```的扩展，基于页面登录的授权认证组件。
+     > 对存在的providerId的场景下，判断providerId是否与当前方法签名相同，进而决定是否发送消息。
 
-  15. 新增扩展组件```auth-oauth2-authorizeserver```
-  > ```halo-auth```扩展，基于oauth2的授权认证组件。
+  8. 新增核心组件`clic-tune`
 
-  16. 新增扩展组件```auth-oauth2-resourceserver```
-  > ```halo-auth```扩展，基于oauth2的资源访问组件。
+     > * 配置项集中管理。
+     > * 基于zookeeper的心跳服务。
+     > * 基于flyway，maven，zookeeper，检查数据库与应用节点的程序版本一致性。
 
-  17. 新增扩展组件```health-checker```
-  > 用于外部代理服务器或负载均衡服务的健康检查服务。
+  9. 新增应用代码模版工程：`xxx-db`
+
+     > 使用flyway管理数据库脚本版本基线。
+
+  10. 新增扩展组件`batch-trigger`
+
+      > 基于http，MQ的批作业触发器组件封装。
+
+  11. 新增扩展组件`batch-admin`
+
+      > 围绕spring-batch做的批作业监控与管理组件。
+
+  12. 新增扩展组件`dbversion-checker`
+
+      > 读取数据库基线的版本号
+
+  13. 新增扩展组件`session-router`
+
+      > 用于对会话缓存的路由分离。
+
+  14. 新增扩展组件`auth-classic`
+
+      > `halo-auth`的扩展，基于页面登录的授权认证组件。
+
+  15. 新增扩展组件`auth-oauth2-authorizeserver`
+
+      > `halo-auth`扩展，基于oauth2的授权认证组件。
+
+  16. 新增扩展组件`auth-oauth2-resourceserver`
+
+      > `halo-auth`扩展，基于oauth2的资源访问组件。
+
+  17. 新增扩展组件`health-checker`
+
+      > 用于外部代理服务器或负载均衡服务的健康检查服务。
+
+
 
