--- a/介绍/配置清单.md
+++ b/介绍/配置清单.md
@@ -102,6 +102,7 @@
 | cache.type | 必填 | REDIS | 缓存容器类型：REDIS |
 | cache.redis.default.mode | 必填 | SINGLETON | 默认缓存的Redis运行模式: SINGLETON\(单例\)，CLUSTER\(集群\)，SHAREED\(分片\) |
 | cache.redis.default.addresses | 必填 |  | 默认缓存的Redis服务地址集合。格式: host1:port1;host2:port2 |
+| cache.redis.default.password | 选填 |  | redis连接密码 |
 | cache.redis.default.timeout | 选填 | 1000 | 默认缓存的Redis连接超时时长\(毫秒\) |
 | cache.redis.default.maxRedirections | 选填 | 6 | 当默认缓存的运行模式为CLUSTER时, 允许重定向的最大次数 |
 | cache.redis.default.maxIdle | 必填 | 200 | 默认缓存的Redis连接池的最大空闲数。0为不限制 |
