--- a/介绍/组件清单.md
+++ b/介绍/组件清单.md
@@ -2,9 +2,9 @@
 
 halo框架使用了很多主流的开源组件和工具。所使用的开源组件也会随着升级不断的变化。目前的开源组件清单如下：
 
-| 开源组件名称 | halo组件名称 |
+| halo组件名称 | 使用的开源组件 |
 | :--- | :--- |
-| `halo-common` | `spring-framework`,`Hibernate-validator`,`FastJSON`,`apache-commons`,`Hibernate-validator` |
+| `halo-common` | `spring-framework`,`Hibernate-validator`,`FastJSON`,`apache-commons`,`Hibernate-validator`,`rx-java`,`metrics` |
 | `halo-log` | `slf4j`,`logback`,`kafka-clients` |
 | `halo-kafka` | `kafka-clients` |
 | `halo-cahce` | `Jedis` |
