--- a/介绍/配置清单.md
+++ b/介绍/配置清单.md
@@ -227,7 +227,8 @@
 | zk.retry.interval | 必填 | 1000 | 开始连接zookeeper时，每次重试的间隔基数（毫秒） |
 | zk.namespace | 必填 | 工程名称 | 工程在zookeeper的命名空间。一般定义为系统标识。 |
 | zk.app.type | 必填 | 工程的应用类型 | 工程的应用类型。一般为：serviceapp、webapp、batchapp |
-| zk.configcenter.enabled | 必填 | true | zookeeper配置中心开关 |
+| zk.configcenter.enabled | 必填 | true | zookeeper配置中心开关zk.configcenter.subscribe.enabled |
+| zk.configcenter.subscribe.enabled | 必填 | false | 对通过zookeeper管理的配置项，应用程序是否订阅其变化，并实时更新运行时的配置项集合 |
 | zk.configcenter.db.encrypt | 必填 | false | zookeeper配置中心启用后，对数据库密码是否自动启动加密 |
 | zk.version.enabled | 必填 | false | zookeeper版本号校验开关 |
 | zk.version.db.tablename | 选填 | SCHEMA\_VERSION | 对数据库版本检查的表名 |
